replace deck page images

--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -70,7 +70,7 @@
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103278923_1207784249573008_8788406610358348311_n-min.jpg" alt="New Deck Floorplan">
-           
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103602998_1206221236395976_8387010408663070491_n-min.jpg" alt="New Deck Floorplan">
           </div>
       </div>
     </div>
