--- a/our-work.html
+++ b/our-work.html
@@ -108,7 +108,26 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
-                              
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103278923_1207784249573008_8788406610358348311_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103602998_1206221236395976_8387010408663070491_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/104468340_1214020765616023_4851588549247669318_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/118003423_1261807217504044_2831321638943334113_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/119700099_1287183998299699_7583208218865987243_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/119700099_1287183998299699_7583208218865987243_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120064324_1292318424452923_7104787214922998174_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120382926_1299027360448696_5531663830282172161_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120430985_1299027467115352_4118174335850720249_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120444019_1299027390448693_2412352650442264840_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/135566824_1378732102478221_4209403212040887739_n-1-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/137560876_1381373012214130_3739285999963849537_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/139450499_1387011384983626_309734983980755243_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/139572517_1387011378316960_3222409254013743299_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/139905534_1387011374983627_7953001270586387941_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/141043392_1387006684984096_3916403393583582807_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/141064013_1387008364983928_158201563143739039_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/141274040_1387006808317417_8590356324950134272_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103602998_1206221236395976_8387010408663070491_n-min.jpg" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/89962803_1140484772969623_2989750769382588416_n-min.jpg" alt="New Deck Floorplan">           
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
