update button anchor

--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -41,7 +41,7 @@
     <div class="hero-nav deck">
     <div class="hero-nav__inner">
         <h1>Relax On a Spacious Backyard Deck</h1>
-        <a class="btn btn-primary" href="#discover-email-form-anchor">Need some ideas?</a>
+        <a class="btn btn-primary" href="#our-work">Need some ideas?</a>
     </div>
 </div>
 <div class="subpage-content">
@@ -51,7 +51,7 @@
     <br />
     <p>T.E.A.M. Builders LTD has experience building custom decks and pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.</p>
     <br />
-    <h3 id="discover-email-form-anchor">Enjoy backyard cookouts all summer long</h3>
+    <h3>Enjoy backyard cookouts all summer long</h3>
     <p>Looking for a trustworthy deck or pergola builder? Look no further. T.E.A.M. Builders LTD constructs custom decks in Cedar Falls, IA and surrounding areas. A backyard deck/pergola will:</p>
     <br />
     <div id="mc_embed_signup">
@@ -65,7 +65,7 @@
             </div>
         </form>
     </div>
-      <div class="text-align-left">
+      <div class="text-align-left" id="our-work">
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
