update deck images

--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -69,6 +69,16 @@
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/back-deck-side-view.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-swing.jpg" alt="New Deck Floorplan">
+
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/170675172_1440051539679610_1279784568954226672_n.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/174618365_1453293065022124_7999413607796807436_n.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/177369989_1450421585309272_9192953740431817130_n.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/178837981_1453293125022118_2702310795059242818_n.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/178997967_1453293091688788_9121514850555641930_n.jpg" alt="New Deck Floorplan">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/179147691_1453293171688780_719442803783550624_n.jpg" alt="New Deck Floorplan">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103278923_1207784249573008_8788406610358348311_n-min.jpg" alt="New Deck Floorplan">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103602998_1206221236395976_8387010408663070491_n-min.jpg" alt="New Deck Floorplan">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/104468340_1214020765616023_4851588549247669318_n-min.jpg" alt="New Deck Floorplan">
