--- a/siding.html
+++ b/siding.html
@@ -95,6 +95,10 @@ Will protect your home from the elements</p>
           </ol>
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesiding.jpg" alt="Blue Siding">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesidingwithbrick.jpg" alt="Blue Siding w/ Brick">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/redsiding.jpg" alt="Red Siding">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/woodshutters.jpg" alt="White Siding w/ Wood Shutters">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Blue Siding">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding 1">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding 2">
