--- a/our-work.html
+++ b/our-work.html
@@ -91,6 +91,8 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Fences</div>
               <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfence.jpg" alt="Wood Picket Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfencewide.jpg" alt="Wood Picket Fence Wide View">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
@@ -177,6 +179,10 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesiding.jpg" alt="Blue Siding">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesidingwithbrick.jpg" alt="Blue Siding w/ Brick">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/redsiding.jpg" alt="Red Siding">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/woodshutters.jpg" alt="White Siding w/ Wood Shutters">    
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding Blue House">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding Beige House">
