update roofing images

--- a/our-work.html
+++ b/our-work.html
@@ -102,7 +102,10 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Roofing</div>
               <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles2.jpg" alt="Overhead View of Gray Shingles">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles1.jpg" alt="Overhead View of Gray Shingles">    
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/claysiding.jpg" alt="Clay Shingles">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
               </div>
