--- a/roofing.html
+++ b/roofing.html
@@ -279,6 +279,10 @@
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_4.png" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0220.JPG" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles2.jpg" alt="Overhead View of Gray Shingles">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles1.jpg" alt="Overhead View of Gray Shingles">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/claysiding.jpg" alt="Clay Shingles">
+
           </div>
       </div>
     </div>
