--- a/pergolas.html
+++ b/pergolas.html
@@ -76,6 +76,15 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/164606794_1430176917333739_4953353958247440180_n.jpg" alt="Wood Home Pergola">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/DJI_0185.jpg" alt="Wood Home Pergola">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0810.jpg" alt="Pergola with Metal Base">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0812.jpg" alt="Pergola with Metal Base">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0819.jpg" alt="Pergola with Shingles and Siding">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0821.jpg" alt="Pergola with Shingles and Siding">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_1845.jpg" alt="Pergola with Shingles and Siding">
+
+
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
