--- a/our-work.html
+++ b/our-work.html
@@ -168,6 +168,13 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Pergolas</div>
               <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/164606794_1430176917333739_4953353958247440180_n.jpg" alt="Tall Gray Pergola">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0810.jpg" alt="Pergola Corner">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0812.jpg" alt="Pergola Corner Brackets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0819.jpg" alt="Stained Wood Pergola Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0821.jpg" alt="Stained Wood Pergola with Swing">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_1845.jpg" alt="Pergola with Shingles and Siding">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/DJI_0185.jpg" alt="Tall Gray Pergola Upward View">    
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Wood Home Pergola">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Shingles">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
