update pergola/overhang images

--- a/pergolas.html
+++ b/pergolas.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Pergolas | T.E.A.M. Builders Ltd.</title>
+    <title>Pergolas & Overhangs | T.E.A.M. Builders Ltd.</title>
+    <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.">
@@ -76,6 +77,9 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhanghomeaddition.jpg" alt="Overhang Home Addition">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhangunderside.jpg" alt="Underside of Overhang Home Addition">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhangwood.jpg" alt="Overhang with Wood Underside">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/164606794_1430176917333739_4953353958247440180_n.jpg" alt="Tall Gray Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0810.jpg" alt="Pergola Corner">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/IMG_0812.jpg" alt="Pergola Corner Brackets">
@@ -86,6 +90,8 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/freestandingoverhang.jpeg" alt="Freestanding Pergola with Metal Base">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/freestandingoverhang2.jpeg" alt="Freestanding Pergola with Metal Base">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p4.jpg" alt="Pergola with Shingles and Siding">
           </div>
