--- a/shed-homes-shouses.html
+++ b/shed-homes-shouses.html
@@ -57,7 +57,8 @@
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg" alt="Shed w/ Small Deck and Chairs">
-
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0116.jpg" alt="2 Stall Garage w/ Orange Accents">
           </div>
       </div>
     </div>
