--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <h3><a href="/deck-pergolas">Decks</a></h3>
             </div>
             <div class="service-card-image">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan">
             </div>
           </div>  
         <div class="service-card mr-20">
@@ -114,7 +114,7 @@
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas">
             </div>
           </div>  
-          <div class="service-card">
+          <div class="service-card mr-20">
             <div class="service-card-header">
               <h3><a href="/siding">Siding</a></h3>
             </div>
@@ -127,7 +127,7 @@
               <h3><a href="/gutters">Gutters</a></h3>
             </div>
             <div class="service-card-image">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls, IA">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls, IA">
             </div>
           </div> 
     </div>
