--- a/our-work.html
+++ b/our-work.html
@@ -65,6 +65,26 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Kitchen Renovations</div>
               <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/brassFaucet.jpg" alt="Brass Faucet">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/closeUpFridgeDrawers.jpg" alt="Fridge and Drawers Close Up View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/darkBrownCabinetsMarbleCounters.jpg" alt="Dark Brown Cabinets and Marble Counters">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/graySubwayTileBacksplash.jpg" alt="Gray Large Tile Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/heatedTileFloor.JPG" alt="Heated Tile Floor">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplash.jpg" alt="Hexagon Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplash2.jpg" alt="Hexagon Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplash3.jpg" alt="Hexagon Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplashFullView.jpg" alt="Hexagon Backsplash Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplashGrayCabinets.jpg" alt="Hexagon Backsplash with Gray Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/islandDifferentColoredCabinets.jpg" alt="Island with Different Colored Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchenStorageNook.jpg" alt="Kitchen Storage Nook">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchenStorageNookFullView.jpg" alt="Kitchen Storage Nook Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/marbleCountertopsWineFridge.jpg" alt="Marble Countertops and Wine Fridge">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/openWoodShelving.jpg" alt="Open Wood Shelving">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteCountertopsOpenShelving.jpg" alt="Open Wood Shelving with White Countertops">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/overheadViewOfKitchen.jpg" alt="Overhead View of Kitchen">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteCountertopsWoodCabinets.jpg" alt="White Countertops with Wood Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteCountertopsWoodCabinets2.jpg" alt="White Countertops with Wood Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteKitchenLargeWindow.jpg" alt="White Kitchen with Large Window">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Island">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
@@ -78,7 +98,6 @@
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/full-kitchen-renovation.png" alt="Full Kitchen Renovation">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/dining-room-renovation.png" alt="Dining Room Renovation">
                 <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/white-backsplash-kitchen-renovation.png" alt="White Backsplash and Countertops Kitchen Renovation">
-    
               </div>
             </div>
           </div>
