--- a/insurance-claims.html
+++ b/insurance-claims.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Contact Us | T.E.A.M. Builders Ltd.</title>
+    <title>Insurance Claims | T.E.A.M. Builders Ltd.</title>
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,7 +41,7 @@
     <nav id="navbar"></nav>
     <div class="hero-nav team">
         <div class="hero-nav__inner">
-            <h1>Guiding you through the Insurance Claims Process</h1>
+            <h1>You want things to be right and get your home back to its pre-loss conditions</h1>
             <a class="btn btn-primary" href="/contact-us">Contact Us</a>
         </div>
     </div>
@@ -49,8 +49,6 @@
       <br />
       <br />
       <p><strong>Scenario:</strong> There was a hail storm or windstorm that just came through. You are sure you have damages, or are concerned you may have damaged or leaking that you want to prevent from creating further problems. You want a contractor or a reputable company that you can trust to guide you through the process.</p>
-      <br/>
-      <p>Additionally, you are aware people are not always fairly compensated and oftentimes short changed in this process. You want to make sure that your insurance will cover the cost of the contractor that will be making the repairs so you don’t owe anything out of pocket (rightfully so, as you have been paying your deductibles) You want things to be right and get your home back to its pre-loss conditions.</p>
       <br />
       <div id="insurance-claims">
         <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/insurance-claims-1.png" alt="Insurance Claim Scenario">
