remove homepage slider

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
         <a href="#apply" class="btn btn-secondary">We're Hiring</a>
       </div>
     </div>
-    <div class="fade">
-      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/72319801_1004989043185864_1142861226615767040_n.jpg"></div>
-      <!-- Put images here to add them to the slider  -->
+    <div>
+      <div>
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/72319801_1004989043185864_1142861226615767040_n.jpg">
+      </div>
     </div>
     </div>
     <div id="main-content-service-selector-wrapper">
