create footer partial

--- a/index.html
+++ b/index.html
@@ -249,6 +249,6 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfa1Dc16bV1gSMrzIZGAVtYy03mKdt_nOle1jhHwtLzM8YDRA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
   <footer id="footer"></footer>
-  <div id="footer-scripts"></div>
+  <div id="footerscripts"></div>
   </body>
 </html>
