--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfa1Dc16bV1gSMrzIZGAVtYy03mKdt_nOle1jhHwtLzM8YDRA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
   <footer id="footer"></footer>
+  <script src="js/loadTemplate.js"></script>
   <section id="footerscripts"></section>
   </body>
 </html>
