add lazyload script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
    <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171264631-1"></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171264631-1">
+   </script>
    <script>
    window.dataLayer = window.dataLayer || [];
    function gtag(){dataLayer.push(arguments);}
@@ -18,7 +19,8 @@
 
    gtag('config', 'UA-171264631-1');
    </script>
-     <script src="js/loadTemplate.js"></script>
+
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
     <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
     <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar valley, t.e.a.m. builders cedar falls">
     <meta property "og:image" content="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" />
@@ -249,7 +251,15 @@
   <div id="employment-application">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfa1Dc16bV1gSMrzIZGAVtYy03mKdt_nOle1jhHwtLzM8YDRA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
-  <footer id="footer"></footer>
-  <section id="footerscripts"></section>
+  <footer id="footer">
+  </footer>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Slick Slider -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- Scripts -->
+    <script src="js/script.js"></script>
+    <script src="js/loadTemplate.js"></script>
+    <script src="js/lazysizes.min.js"></script>
   </body>
 </html>
