--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </div>
   </section>
   <div id="employment-application">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfa1Dc16bV1gSMrzIZGAVtYy03mKdt_nOle1jhHwtLzM8YDRA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfa1Dc16bV1gSMrzIZGAVtYy03mKdt_nOle1jhHwtLzM8YDRA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe>
   </div>
   <footer id="footer">
   </footer>
