--- a/referral.html
+++ b/referral.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Learn more about our referral program!">
       <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171264631-1">
@@ -59,7 +61,7 @@
       <p><strong>What if I refer someone and there is no project accepted?</strong> A lead generated is not qualified you are still eligible to receive a $25 gift card.</p>
       <br />
       <div id="referral-form">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxNz6b5gSga4jtEenXubv13O0QxgFFHCdVHgQkPHgLVxumig/viewform?embedded=true" width="640" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>      </div>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxNz6b5gSga4jtEenXubv13O0QxgFFHCdVHgQkPHgLVxumig/viewform?embedded=true" width="640" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe>      </div>
     </div>
     <br />
   <footer id="footer">
