update exterior remodeling page

--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -37,42 +37,36 @@
     <p>Does your house need a face-lift? Don’t let your home’s old, dirty exterior diminish your curb appeal. Get in touch with the pros at T.E.A.M. Builders Ltd. today. Whether you want to update the <a href="/siding" class="green-link">siding</a> on your house or need <a href="/fencing" class="green-link">fence</a> installation help in Cedar Falls, IA, you can rely on us to finish the job.
     </p>
     <p>Once we’re finished, you’ll be amazed by how beautiful your house looks. Trust us-your neighbors will notice, too.</p>
-    <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now speak with a deck builder in Cedar Falls, IA.</p>
+    <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now speak with a deck builder in Cedar Falls, IA.</p>
     <div id="how-we-can-help"></div>
     <br />
       <div class="text-align-left">
         <div class="row">
-          <div class="col mr-5">
             <h3>Transform the exterior of your home</h3>
             <p>When you’re ready to renovate your house, make us a part of your team. The crew at T.E.A.M. Builders Ltd. is equipped to handle all your exterior remodeling needs, no matter how big or small they might be. You can hire us to:</p>
             <div class="feature-container">
                 <div class="feature">
-                  <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/siding">Repair or replace your siding</a>
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <a href="/siding">Repair or replace your siding</a>
                 </div>
                 <div class="feature">
-                  <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/roofing">Fix your roof</a>
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <a href="/roofing">Fix your roof</a>
                 </div>
                 <div class="feature">
-                  <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/decks">Install a custom deck or patio</a>
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <a href="/decks">Install a custom deck or patio</a>
                 </div>
                 <div class="feature">
-                  <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/fencing">Add a fence around your yard</a>
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <a href="/fencing">Add a fence around your yard</a>
                 </div>
-              </div>
-          </div>
-          <div class="col">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan">
           </div>
         </div>
           <br />
-          <h4 class="h1">Our Work</h4>
           <div class="row">
+            <h4 class="h1">Our Work</h4>
             <div class="col">
-              <h2>Exterior Renovation</h2>
               <div data-accordion-group>
                 <div class="our-work-accordion" data-accordion>
                   <div data-control>Fences</div>
