--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -38,8 +38,6 @@
     <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
     <br />
       <div class="text-align-left" id="how-we-can-help">
-        <div class="row">
-          <div class="col mr-5">
             <h3>Bring your remodeling vision to life</h3>
             <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations" class="green-link">kitchens</a>, <a href="/bathroom-renovations" class="green-link">bath</a>, and <a href="/basement-renovations" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
             <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
@@ -57,17 +55,63 @@
                   <a href="/basement-renovations">Create a custom space that you and your family will love</a>
                 </div>
               </div>
-          </div>
-          <div class="col">
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Kitchen Renovation">
-          </div>
-        </div>
           <br />
-          <h4 class="h1">Our Work</h4>
-          <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Renovation with Island">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="New Kitchen Renovation">
+          <h2>Interior Renovation</h2>
+          <div data-accordion-group>
+            <div class="our-work-accordion" data-accordion>
+             <div data-control>Basement Renovations</div>
+              <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Remodel">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Remodel">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-cover.jpg" alt="Basement Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-barn-door.jpg" alt="Basement Barn Door">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-bathroom.jpg" alt="Basement Bathroom">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-bedroom.jpg" alt="Basement Bedroom">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-gym-full-view.jpg" alt="Basement Gym - Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-gym.jpg" alt="Basement Gym">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-living-room.jpg" alt="Basement Living Room">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-with-barn-door.jpg" alt="Basement w/ Barn Door">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-work-space.jpg" alt="Basement Workspace">
+              </div>
+            </div>
+            <div class="our-work-accordion" data-accordion>
+             <div data-control>Kitchen Renovations</div>
+              <div data-content>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/brassFaucet.jpg" alt="Brass Faucet">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/closeUpFridgeDrawers.jpg" alt="Fridge and Drawers Close Up View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/darkBrownCabinetsMarbleCounters.jpg" alt="Dark Brown Cabinets and Marble Counters">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/graySubwayTileBacksplash.jpg" alt="Gray Large Tile Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/heatedTileFloor.JPG" alt="Heated Tile Floor">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplash.jpg" alt="Hexagon Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplash2.jpg" alt="Hexagon Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplash3.jpg" alt="Hexagon Backsplash">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplashFullView.jpg" alt="Hexagon Backsplash Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/hexagonBacksplashGrayCabinets.jpg" alt="Hexagon Backsplash with Gray Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/islandDifferentColoredCabinets.jpg" alt="Island with Different Colored Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchenStorageNook.jpg" alt="Kitchen Storage Nook">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchenStorageNookFullView.jpg" alt="Kitchen Storage Nook Full View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/marbleCountertopsWineFridge.jpg" alt="Marble Countertops and Wine Fridge">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/openWoodShelving.jpg" alt="Open Wood Shelving">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteCountertopsOpenShelving.jpg" alt="Open Wood Shelving with White Countertops">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/overheadViewOfKitchen.jpg" alt="Overhead View of Kitchen">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteCountertopsWoodCabinets.jpg" alt="White Countertops with Wood Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteCountertopsWoodCabinets2.jpg" alt="White Countertops with Wood Cabinets">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/whiteKitchenLargeWindow.jpg" alt="White Kitchen with Large Window">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Island">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash.png" alt="Gray Backsplash Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash-2.png" alt="Gray Backsplash Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash-full-renovation.png" alt="Gray Backsplash Kitchen Renovation Full">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/new-faucet-white-countertops.png" alt="New Faucet and White Countertops">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/new-faucet-close.png" alt="Up Close New Faucet">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/backsplash-tile.png" alt="New Tile Backsplash Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/full-kitchen-renovation.png" alt="Full Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/dining-room-renovation.png" alt="Dining Room Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/white-backsplash-kitchen-renovation.png" alt="White Backsplash and Countertops Kitchen Renovation">
+              </div>
+            </div>
           </div>
       </div>
     </div>
