--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Learn about our kitchensand basement/home additions and remodeling services in Cedar Falls, IA</h2>
+  <h2>Learn about our kitchens and basement/home additions and remodeling services in Cedar Falls, IA</h2>
     <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their kitchens, bath, and basement/home additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.
     </p>
     <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
@@ -41,6 +41,7 @@
             <h3>Bring your remodeling vision to life</h3>
             <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations" class="green-link">kitchens</a>, <a href="/bathroom-renovations" class="green-link">bath</a>, and <a href="/basement-renovations" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
             <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
+            <br>
             <div class="feature-container">
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -56,7 +57,7 @@
                 </div>
               </div>
           <br />
-          <h2>Interior Renovation</h2>
+          <h4>Our Work</h4>
           <div data-accordion-group>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Basement Renovations</div>
@@ -115,6 +116,7 @@
           </div>
       </div>
     </div>
+    <br>
     <section class="gradient-banner">
       <div class="gradient-content">
         <span>
