update header, content edits

--- a/agriculture-commercial-buildings.html
+++ b/agriculture-commercial-buildings.html
@@ -51,7 +51,7 @@
           </div>
       </div>
     </div>
-    <section class="gradient-banner">
+    <!-- <section class="gradient-banner">
       <div class="gradient-content">
         <span>
           Don’t wait any longer to get started on your bathroom remodel. Contact us today to arrange for bathroom remodeling services.
@@ -59,7 +59,7 @@
         <div class="triangle"></div>
         <a class="btn btn-secondary">Contact Us</a>
       </div>
-    </section>
+    </section> -->
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
