--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property "og:image:type" content="/image/png" />   
     <meta property "og:image:width" content="250" />  
     <meta property "og:image:height" content="50" />  
-    <meta property "og:image:alt" content="T.E.A.M. Builders Logo" />  
+    <meta property "og:image:alt" content="T.E.A.M. Builders Limited" />  
   </head>
   <body class="home">
 <div class="covid-accordion alert" data-accordion>
@@ -149,7 +149,7 @@
      </div> 
   <section id="below-main-content-section">
     <div class="below-main-content">
-      <h1>Make Your House Look Like New</h1>
+      <h2>Make Your House Look Like New</h2>
       <h3>SCHEDULE A CONSULTATION WITH A REMODELING CONTRACTOR IN CEDAR FALLS, IA</h3>
       <p style="">Our home remodeler should be the top choice for your home renovation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
